--- a/pom.xml
+++ b/pom.xml
@@ -60,11 +60,13 @@
                 <artifactId>javax.servlet-api</artifactId>
                 <version>4.0.1</version>
             </dependency>
+            <!--
             <dependency>
                 <groupId>com.fasterxml.jackson.dataformat</groupId>
                 <artifactId>jackson-dataformat-xml</artifactId>
                 <version>2.3.1</version>
             </dependency>
+            -->
             <dependency>
                 <groupId>javax.ws.rs</groupId>
                 <artifactId>javax.ws.rs-api</artifactId>
@@ -92,6 +94,7 @@
                 <version>8.0.23</version>
             </dependency>
             <!--  Gson: Java to Json conversion -->
+           <!--
             <dependency>
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
@@ -110,12 +113,15 @@
                 <artifactId>jaxb-impl</artifactId>
                 <version>3.0.1</version>
             </dependency>
+            -->
             <!-- XSD serialisering -->
+            <!--
             <dependency>
                 <groupId>xerces</groupId>
                 <artifactId>xercesImpl</artifactId>
                 <version>2.12.1</version>
             </dependency>
+            -->
             <!-- dataAccesLayer.apiDAO -->
             <dependency>
                 <groupId>com.mashape.unirest</groupId>
@@ -127,6 +133,11 @@
                 <groupId>io.jsonwebtoken</groupId>
                 <artifactId>jjwt</artifactId>
                 <version>0.7.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish.jersey.media</groupId>
+                <artifactId>jersey-media-json-jackson</artifactId>
+                <version>2.25</version>
             </dependency>
         </dependencies>
     </project>
