--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
                             <target>1.8</target>
                         </configuration>
                     </plugin>
-
+                    <!--
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>jaxb2-maven-plugin</artifactId>
@@ -51,6 +51,7 @@
                             <clearOutputDir>false</clearOutputDir>
                         </configuration>
                     </plugin>
+                    -->
                 </plugins>
             </pluginManagement>
         </build>
@@ -80,13 +81,16 @@
             <dependency>
                 <groupId>javax.xml.bind</groupId>
                 <artifactId>jaxb-api</artifactId>
-                <version>2.3.1</version>
+                <version>2.2.7</version>
             </dependency>
+            <!--
             <dependency>
                 <groupId>javax.activation</groupId>
                 <artifactId>activation</artifactId>
                 <version>1.1</version>
             </dependency>
+            -->
+
             <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
             <dependency>
                 <groupId>mysql</groupId>
@@ -137,6 +141,11 @@
             <dependency>
                 <groupId>org.glassfish.jersey.media</groupId>
                 <artifactId>jersey-media-json-jackson</artifactId>
+                <version>2.25</version>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish.jersey.media</groupId>
+                <artifactId>jersey-media-jaxb</artifactId>
                 <version>2.25</version>
             </dependency>
         </dependencies>
